@@ -7,6 +7,8 @@
 
 package it.csi.citpwa.business.ws.service.svista.client;
 
+import it.csi.citpwa.util.Constants;
+
 public class Provincia  implements java.io.Serializable {
     private java.lang.String codIstat;
 
@@ -134,19 +136,18 @@ public class Provincia  implements java.io.Serializable {
         this.sigla = sigla;
     }
 
-    private java.lang.Object __equalsCalc = null;
+    private java.lang.Object equalsCalc = null;
     public synchronized boolean equals(java.lang.Object obj) {
+        if (obj == null) return false;
         if (!(obj instanceof Provincia)) return false;
         Provincia other = (Provincia) obj;
-        if (obj == null) return false;
         if (this == obj) return true;
-        if (__equalsCalc != null) {
-            return (__equalsCalc == obj);
+        if (equalsCalc != null) {
+            return (equalsCalc == obj);
         }
-        __equalsCalc = obj;
-        boolean _equals;
-        _equals = true && 
-            ((this.codIstat==null && other.getCodIstat()==null) || 
+        equalsCalc = obj;
+        boolean equals;
+        equals = ((this.codIstat==null && other.getCodIstat()==null) || 
              (this.codIstat!=null &&
               this.codIstat.equals(other.getCodIstat()))) &&
             this.id == other.getId() &&
@@ -159,32 +160,32 @@ public class Provincia  implements java.io.Serializable {
             ((this.sigla==null && other.getSigla()==null) || 
              (this.sigla!=null &&
               this.sigla.equals(other.getSigla())));
-        __equalsCalc = null;
-        return _equals;
+        equalsCalc = null;
+        return equals;
     }
 
-    private boolean __hashCodeCalc = false;
+    private boolean hashCodeCalc = false;
     public synchronized int hashCode() {
-        if (__hashCodeCalc) {
+        if (hashCodeCalc) {
             return 0;
         }
-        __hashCodeCalc = true;
-        int _hashCode = 1;
+        hashCodeCalc = true;
+        int hashCode = 1;
         if (getCodIstat() != null) {
-            _hashCode += getCodIstat().hashCode();
+            hashCode += getCodIstat().hashCode();
         }
-        _hashCode += new Long(getId()).hashCode();
+        hashCode += Long.valueOf(getId()).hashCode();
         if (getIdRegione() != null) {
-            _hashCode += getIdRegione().hashCode();
+            hashCode += getIdRegione().hashCode();
         }
         if (getNome() != null) {
-            _hashCode += getNome().hashCode();
+            hashCode += getNome().hashCode();
         }
         if (getSigla() != null) {
-            _hashCode += getSigla().hashCode();
+            hashCode += getSigla().hashCode();
         }
-        __hashCodeCalc = false;
-        return _hashCode;
+        hashCodeCalc = false;
+        return hashCode;
     }
 
     // Type metadata
@@ -196,31 +197,31 @@ public class Provincia  implements java.io.Serializable {
         org.apache.axis.description.ElementDesc elemField = new org.apache.axis.description.ElementDesc();
         elemField.setFieldName("codIstat");
         elemField.setXmlName(new javax.xml.namespace.QName("ente", "codIstat"));
-        elemField.setXmlType(new javax.xml.namespace.QName("http://www.w3.org/2001/XMLSchema", "string"));
+        elemField.setXmlType(new javax.xml.namespace.QName(Constants.XML_SCHEMA, Constants.TYPE_STRING));
         elemField.setNillable(true);
         typeDesc.addFieldDesc(elemField);
         elemField = new org.apache.axis.description.ElementDesc();
         elemField.setFieldName("id");
         elemField.setXmlName(new javax.xml.namespace.QName("ente", "id"));
-        elemField.setXmlType(new javax.xml.namespace.QName("http://www.w3.org/2001/XMLSchema", "long"));
+        elemField.setXmlType(new javax.xml.namespace.QName(Constants.XML_SCHEMA, "long"));
         elemField.setNillable(false);
         typeDesc.addFieldDesc(elemField);
         elemField = new org.apache.axis.description.ElementDesc();
         elemField.setFieldName("idRegione");
         elemField.setXmlName(new javax.xml.namespace.QName("ente", "idRegione"));
-        elemField.setXmlType(new javax.xml.namespace.QName("http://www.w3.org/2001/XMLSchema", "long"));
+        elemField.setXmlType(new javax.xml.namespace.QName(Constants.XML_SCHEMA, "long"));
         elemField.setNillable(true);
         typeDesc.addFieldDesc(elemField);
         elemField = new org.apache.axis.description.ElementDesc();
         elemField.setFieldName("nome");
         elemField.setXmlName(new javax.xml.namespace.QName("ente", "nome"));
-        elemField.setXmlType(new javax.xml.namespace.QName("http://www.w3.org/2001/XMLSchema", "string"));
+        elemField.setXmlType(new javax.xml.namespace.QName(Constants.XML_SCHEMA, Constants.TYPE_STRING));
         elemField.setNillable(true);
         typeDesc.addFieldDesc(elemField);
         elemField = new org.apache.axis.description.ElementDesc();
         elemField.setFieldName("sigla");
         elemField.setXmlName(new javax.xml.namespace.QName("ente", "sigla"));
-        elemField.setXmlType(new javax.xml.namespace.QName("http://www.w3.org/2001/XMLSchema", "string"));
+        elemField.setXmlType(new javax.xml.namespace.QName(Constants.XML_SCHEMA, Constants.TYPE_STRING));
         elemField.setNillable(true);
         typeDesc.addFieldDesc(elemField);
     }
@@ -237,11 +238,11 @@ public class Provincia  implements java.io.Serializable {
      */
     public static org.apache.axis.encoding.Serializer getSerializer(
            java.lang.String mechType, 
-           java.lang.Class _javaType,  
-           javax.xml.namespace.QName _xmlType) {
+           java.lang.Class javaType,  
+           javax.xml.namespace.QName xmlType) {
         return 
           new  org.apache.axis.encoding.ser.BeanSerializer(
-            _javaType, _xmlType, typeDesc);
+            javaType, xmlType, typeDesc);
     }
 
     /**
@@ -249,11 +250,11 @@ public class Provincia  implements java.io.Serializable {
      */
     public static org.apache.axis.encoding.Deserializer getDeserializer(
            java.lang.String mechType, 
-           java.lang.Class _javaType,  
-           javax.xml.namespace.QName _xmlType) {
+           java.lang.Class javaType,  
+           javax.xml.namespace.QName xmlType) {
         return 
           new  org.apache.axis.encoding.ser.BeanDeserializer(
-            _javaType, _xmlType, typeDesc);
+            javaType, xmlType, typeDesc);
     }
 
 }
